[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/digit_span.gd" id="1_script"]

[node name="DigitSpan" type="Node"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DIGIT SPAN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="CountdownLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 10.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="DigitDisplay" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InputField" type="LineEdit" parent="VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
placeholder_text = "Type digits here..."
alignment = 1

[node name="Spacer5" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer6" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Length: 0 / 9"
horizontal_alignment = 1
vertical_alignment = 1
